@@ -8,16 +8,8 @@
 
 // This sets up the layouts and styles selected from the options panel
 
-if (!function_exists('optionsframework_wp_head')) {
-	function optionsframework_wp_head() { 
-		$shortname =  get_option('of_shortname');
-	
-		//Layouts
-		 $layout = get_option($shortname .'_layout');
-		 if ($layout == '') {
-		 	$layout = '2c-r-fixed';
-		 }
-	     echo '<link href="'. OF_DIRECTORY .'/layouts/'. $layout . '.css" rel="stylesheet" type="text/css" />'."\n";
+if (!function_exists('of_wp_head')) {
+	function optionsframework_wp_head() {
 	    
 		//Styles
 		 if(!isset($_REQUEST['style']))
@@ -40,8 +32,21 @@ if (!function_exists('optionsframework_wp_head')) {
 	}
 }
 
-add_action('wp_head', 'optionsframework_wp_head');
+add_action('wp_head', 'of_wp_head');
 
+// Adds a body class to indicate sidebar position
+
+add_filter('body_class','of_body_class');
+ 
+function of_body_class($classes) {
+	$shortname =  get_option('of_shortname');
+	$layout = get_option($shortname .'_layout');
+	if ($layout == '') {
+		$layout = '2c-right';
+	}
+	$classes[] = $layout;
+	return $classes;
+}
 
 /*-----------------------------------------------------------------------------------*/
 /* Output CSS from standarized options */
@@ -50,9 +55,9 @@ add_action('wp_head', 'optionsframework_wp_head');
 function of_head_css() {
 
 		$shortname =  get_option('of_shortname'); 
-		$output = '';
-		
 		$custom_css = get_option('of_custom_css');
+				
+		$output = '';
 		
 		if ($custom_css <> '') {
 			$output .= $custom_css . "\n";
@@ -70,28 +75,25 @@ function of_head_css() {
 /* Add Favicon
 /*-----------------------------------------------------------------------------------*/
 
-function childtheme_favicon() {
+function of_favicon() {
 		$shortname =  get_option('of_shortname'); 
 		if (get_option($shortname . '_custom_favicon') != '') {
 	        echo '<link rel="shortcut icon" href="'.  get_option('of_custom_favicon')  .'"/>'."\n";
 	    }
-		else { ?>
-			<link rel="shortcut icon" href="<?php echo bloginfo('stylesheet_directory') ?>/admin/images/favicon.ico" />
-<?php }
 }
 
-add_action('wp_head', 'childtheme_favicon');
+add_action('wp_head', 'of_favicon');
 
 /*-----------------------------------------------------------------------------------*/
 /* Show analytics code in footer */
 /*-----------------------------------------------------------------------------------*/
 
-function childtheme_analytics(){
+function of_analytics(){
 	$shortname =  get_option('of_shortname');
 	$output = get_option($shortname . '_google_analytics');
 	if ( $output <> "" ) 
 		echo stripslashes($output) . "\n";
 }
-add_action('wp_footer','childtheme_analytics');
+add_action('wp_footer','of_analytics');
 
 ?>
