@@ -7,6 +7,7 @@
 \f0\fs24 \cf0 Portfolio Theme 0.6\
 \
 - Made further updates for WordPress 3.1 compatibility\
+- Added options panel (props WooThemes)\
 \
 Portfolio Theme 0.5.3\
 \
